Frontend and backend are talking

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "server": "go run ../cmd/myapp/main.go"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
